Fix Design shift

--- a/style.css
+++ b/style.css
@@ -127,13 +127,13 @@ h1,
 }
 
 .card-element__top {
-  padding-top: 1rem;
+  padding-top: 0.9rem;
   color: var(--soft-red);
   background-color: var(--dark-less-desaturated-blue);
 }
 
 .card-element__bottom {
-  padding-bottom: 1rem;
+  padding-bottom: 0.9rem;
   line-height: 0;
   color: var(--soft-red);
   background-color: var(--dark-desaturated-blue);
@@ -170,7 +170,7 @@ h1,
 
 .card-element-flip__top {
   top: 0;
-  padding-top: 0.8rem;
+  padding-top: 0.9rem;
   color: var(--soft-red);
   background-color: var(--dark-less-desaturated-blue);
   transform-origin: bottom;
@@ -179,7 +179,7 @@ h1,
 .card-element-flip__bottom {
   bottom: 0;
   line-height: 0;
-  padding-bottom: 0.8rem;
+  padding-bottom: 0.9rem;
   color: var(--soft-red);
   background-color: var(--dark-desaturated-blue);
   border-top: 1px solid var(--very-black-blue);
